# ros2-video-recorder

./: .gitignore  README.md  pyproject.toml
ros2_video_recorder_mcp/: __init__.py  cli.py  image_manager.py  recorder_manager.py  server.py  video_manager.py
