[project]
name = "ros2-video-recorder-mcp"
version = "0.1.0"
description = "MCP server for controlling ROS2 video recorder"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
]

[project.scripts]
ros2-video-recorder-mcp = "ros2_video_recorder_mcp.server:main"
ros2-recorder-cli = "ros2_video_recorder_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
